--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     body {
       width: 100%;
       height: 100vh;
-      background: linear-gradient(45deg, #fff59c, hsl(28, 100%, 75%), #f8c842);
+      background: linear-gradient(45deg, #fff6a9, hsl(28, 100%, 81%), #ecd28b);
       background-size: 200% 200%;
-      animation: bggradient 12s ease infinite;
+      animation: bggradient 4s ease infinite;
       background-attachment: fixed;
 
     }
@@ -309,7 +309,7 @@
           <p class="member-text">芝田</p>
         </div>
         <div class="member">
-          <a href="https://twitter.com/ZumaTK_P" target="_blank"><img src="member_image/15.jpeg" class="member-img"
+          <a href="https://twitter.com/ZumaTK_P" target="_blank"><img src="member_image/15.png" class="member-img"
               align="left"></a>
           <p class="member-text">ZumaTK</p>
         </div>
@@ -339,7 +339,7 @@
           <p class="member-text">t404:null</p>
         </div>
         <div class="member">
-          <a href="https://twitter.com/jiubii0108" target="_blank"><img src="member_image/21.jpeg" class="member-img"
+          <a href="https://twitter.com/jiubii0108" target="_blank"><img src="member_image/21.png" class="member-img"
               align="left"></a>
           <p class="member-text">ラマ</p>
         </div>
@@ -384,9 +384,9 @@
           <p class="member-text">きなこ</p>
         </div>
         <div class="member">
-          <a href="https://twitter.com/NeOFeSAgITeNSeP" target="_blank"><img src="member_image/30.jpeg"
+          <a href="https://twitter.com/NeOFeSAgITeNSeP" target="_blank"><img src="member_image/30.jpg"
               class="member-img" align="left"></a>
-          <p class="member-text">sensen</p>
+          <p class="member-text">LiiL</p>
         </div>
 
 
