--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="同人音楽サークル。総勢30名のメンバーの楽曲を中心に発信。DTMに関する企画動画も配信予定。">
+  <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+  <link rel="icon" type="image/png" href="icon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@500&display=swap" rel="stylesheet">
   <title>SECRET [ 同人音楽サークル ]</title>
   <style>
     body {
@@ -20,6 +26,9 @@
       background-size: 200% 200%;
       animation: bggradient 4s ease infinite;
       background-attachment: fixed;
+      font-family: "Zen Maru Gothic", serif;
+      font-weight: 500;
+      font-style: normal;
 
     }
 
@@ -195,13 +204,14 @@
     }
 
     footer {
-        color: white;
-        margin-top: 30px;
-        margin-bottom: 30px;
+      color: white;
+      margin-top: 30px;
+      margin-bottom: 30px;
     }
+
     ::selection {
-    background: #faaa315a;
-}
+      background: #faaa315a;
+    }
   </style>
 </head>
 
@@ -417,11 +427,11 @@
     </center>
     <br><br><br>
   </div>
-    <footer>
-      <center>
-        ©️ 2024 SECRET[同人音楽サークル]<br><br><br>
-      </center>
-    </footer>
+  <footer>
+    <center>
+      ©️ 2024 SECRET[同人音楽サークル]<br><br><br>
+    </center>
+  </footer>
 </body>
 
 </html>
