--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="member">
           <a href="https://twitter.com/KatoMudonex" target="_blank"><img src="member_image/4.png" class="member-img"
               align="left"></a>
-          <p class="member-text">かとうどん</p>
+          <p class="member-text">KatoMudon</p>
         </div>
         <div class="member">
           <a href="https://twitter.com/iamastroouo" target="_blank"><img src="member_image/5.png" class="member-img"
