--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="member">
           <a href="https://twitter.com/9kyumao" target="_blank"><img src="member_image/19.jpeg" class="member-img"
               align="left"></a>
-          <p class="member-text">玖毛/9MAO</p>
+          <p class="member-text">玖毛</p>
         </div>
         <div class="member">
           <a href="https://twitter.com/t404_null" target="_blank"><img src="member_image/20.jpeg" class="member-img"
